--- a/src/pages/Projekty/projekty.css
+++ b/src/pages/Projekty/projekty.css
@@ -41,3 +41,15 @@ margin-bottom: 50px;
 img{
     max-width: 100%;
 }
+
+@media (max-width: 500px) {
+    .projects-photos{
+        display: inline-block;
+        height: 100%;
+        margin-bottom: 0;
+    }
+    .photo1{
+        width: 100%;
+        height: 400px;
+    }
+}
