--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -8,6 +8,7 @@
 }
 
 .bestpomp-navbar-logo {
+  margin-left: 5%;
   width: 116px;
   height: 45px;
   object-fit: contain;
@@ -56,7 +57,9 @@
     margin-left: 35%;
     width:auto
   }
-
+  .bestpomp-navbar-logo{
+    margin-left: 0;
+  }
   .bestpomp-navbar-links-containers {
     display: none;
   }
